--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,10 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/doctorhalsey.github.io" # the subpath of your site, e.g. /blog
-url: "doctorhalsey.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/robertafps.github.io" # the subpath of your site, e.g. /blog
+url: "robertafps.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: --
-github_username:  doctorhalsey
+github_username:  robertafps
 
 # Build settings
 markdown: kramdown
